final review corrected "Block" typo

--- a/Blockchain_Simulator_App/MainWindow.xaml
+++ b/Blockchain_Simulator_App/MainWindow.xaml
@@ -109,7 +109,7 @@
                             <ColumnDefinition Width="100"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Blok #" Style="{StaticResource titleText}"/>
+                        <TextBlock Text="Block #" Style="{StaticResource titleText}"/>
                         <TextBox x:Name="indexText" Style="{StaticResource readOnlyTextBox}"/>
                     </Grid>
                     <!--TimeStamp-->
